--- a/templates/empleados/edit.html
+++ b/templates/empleados/edit.html
@@ -1,3 +1,5 @@
+{% include 'header.html' %}
+
 {% for empleado in empleados %}
     
 <form method="post" action="/store" enctype="multipart/form-data">
@@ -15,6 +17,11 @@
     <input type="text" value="{{ empleado[2] }}" name="txtCorreo" id="txtCorreo">
     <br>
 
+    Foto:
+    <br>
+    <img class="img-thumbnail" width="100" src="{{ url_for('uploads', nombreFoto=empleado[3] )}}" alt="">
+    <br>
+    
     Foto: {{ empleado[0] }}
     <input type="file" name="txtFoto" id="txtFoto">
     <br>
@@ -28,3 +35,5 @@
     {{ empleado[2] }}
     {{ empleado[3] }}
 {% endfor %}
+
+{% include 'footer.html' %}
